cmake_minimum_required(VERSION 3.19)
set(CMAKE_C_STANDARD 99)

project(task1_1 C)
project(task1_2 C)
add_executable(task1_1 task1/1.c)
add_executable(task1_2 task1/2.c)

project(task2_1 C)
project(task2_2 C)
add_executable(task2_1 task2/1.c)
add_executable(task2_2 task2/2.c)

project(task3_1 C)
project(task3_2 C)
add_executable(task3_1 task3/1.c)
add_executable(task3_2 task3/2.c)

project(task4 C)
add_executable(task4 task4/main.c)